add /applications/me endpoint
