# docs/api/api.yaml
@@ -126,6 +126,26 @@ paths:
       tags:
         - Application
 
+  /v1/applications/me:
+    get:
+      operationId: "application"
+      description: Return the information of an application by it's API-key
+      parameters:
+        - in: header
+          name: X-Api-Key
+          description: Application API Key
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetApplicationResponse'
+      tags:
+        - Application
     post:
       operationId: "create-application"
       description: |
