# src/main/kotlin/com/wutsi/platform/security/endpoint/CreateApplicationController.kt
@@ -3,29 +3,16 @@ package com.wutsi.platform.security.endpoint
 import com.wutsi.platform.security.`delegate`.CreateApplicationDelegate
 import com.wutsi.platform.security.dto.CreateApplicationRequest
 import com.wutsi.platform.security.dto.CreateApplicationResponse
-import org.springframework.web.bind.`annotation`.CrossOrigin
 import org.springframework.web.bind.`annotation`.PostMapping
 import org.springframework.web.bind.`annotation`.RequestBody
 import org.springframework.web.bind.`annotation`.RestController
 import javax.validation.Valid
 
 @RestController
-@CrossOrigin(
-    origins = ["*"],
-    allowedHeaders = ["Content-Type", "Authorization", "Content-Length", "X-Requested-With"],
-    methods = [
-        org.springframework.web.bind.annotation.RequestMethod.GET,
-        org.springframework.web.bind.annotation.RequestMethod.DELETE,
-        org.springframework.web.bind.annotation.RequestMethod.OPTIONS,
-        org.springframework.web.bind.annotation.RequestMethod.HEAD,
-        org.springframework.web.bind.annotation.RequestMethod.POST,
-        org.springframework.web.bind.annotation.RequestMethod.PUT
-    ]
-)
 public class CreateApplicationController(
     private val `delegate`: CreateApplicationDelegate
 ) {
-    @PostMapping("/v1/applications")
+    @PostMapping("/v1/applications/me")
     public fun invoke(@Valid @RequestBody request: CreateApplicationRequest):
         CreateApplicationResponse = delegate.invoke(request)
 }
